--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
            <nav class="navbar">
                 <div class="nome">
                     <h1>Val <span>Móveis</span></h1>
-                    <p>Planeje seus móveis conosco </p>
                 </div>
                 <div class="menu">
                     <ul>
@@ -45,7 +44,11 @@
            </div>
     </header>
     <script src="javascript.js"></script>
-   
-    
+
+    <main>
+        <section>
+            <div></div>
+        </section>
+    </main>
 </body>
 </html>
