--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
 
     <main>
         <section>
-            <div></div>
+            
+            <div class="apresentacao">
+                <div class="principal">
+                    <h1>Planeje Seus Móveis conosco</h1>
+                    <p>Trabalhamos com móveis sob medida</p>
+                    <p>Planeje já conosco</p>
+                </div>
+                <div class="div-logo"><img class="img" src="img/moveis-jardim.jpg" ></div>
+
+            </div>
         </section>
     </main>
 </body>
