--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     <script src="javascript.js"></script>
 
     <main>
-        <section>
-            
-            <div class="apresentacao">
+        <section class="home">
                 <div class="principal">
                     <h1>Planeje Seus Móveis conosco</h1>
                     <p>Trabalhamos com móveis sob medida</p>
