--- a/index.html
+++ b/index.html
@@ -46,13 +46,20 @@
     <script src="javascript.js"></script>
 
     <main>
-        <section class="home">
-                <div class="principal">
-                    <h1>Planeje Seus Móveis conosco</h1>
-                    <p>Trabalhamos com móveis sob medida</p>
-                    <p>Planeje já conosco</p>
+        <div class="redor">
+        <section>
+                
+                    <div class="principal">
+                        <h1>Planeje Seus Móveis conosco</h1>
+                        <p>Trabalhamos com móveis sob medida.</p>
+                        <p>profissional com 20 anos de trabalho.</p>
+                    
+                    </div>
                 </div>
         </section>
     </main>
+    <footer><a href="https://www.freepik.com/free-photo/beautiful-shot-modern-house-kitchen-shelves-drawers_7901164.htm#query=moveis&position=28&from_view=search&track=sph">Image by wirestock</a> on Freepik
+        Image by <a href="https://www.freepik.com/free-photo/empty-modern-room-with-furniture_20521165.htm#page=2&query=moveis%20black&position=21&from_view=search&track=ais">Freepik</a>
+    </footer>
 </body>
 </html>
