--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
         <div class="redor">
-        <section>   
+        <section class=imgfundo>   
                     <div class="principal">
                         <h1>Planeje Seus Móveis conosco</h1>
                         <p>Trabalhamos com móveis sob medida.</p>
@@ -55,6 +55,13 @@
                     
                     </div>
                 </div>
+        </section>
+        <section class="ambiente">
+            <div class="redor1">
+                <div>
+                    <h1>Navegue por ambiente</h1>
+                </div>
+            </div>
         </section>
     </main>
     
